# mpv-winbuild

./: CMakeLists.txt  README.md  build.sh  compile-lgpl-libmpv.patch
.github/workflows/: clean.yml  cleanup.yml  llvm.yml  llvm_clang.yml  mpv.yml  mpv_clang.yml  mpv_gcc.yml  toolchain.yml
patch/: 0000-libarchive-pass-correct-cflags.patch  0000-rustup-downgrade-to-llvm-21.patch  0001-mpv-copy-mpv-register-and-mpv-unregister-helpers.patch  0002-openssl-use-winstore-by-default.patch  0003-mpv-add-max_requested_size.patch  0004-ffmpeg-add-max_requested_size.patch  0004-ffmpeg-add-max_requested_size.patch.bak  0004-ffmpeg-avformat-http-add-request-size.patch  0005-fontconfig-rebase.patch  0005-mpv-enable-sdl2-gamepad-only.patch  0005-vulkan-rebase-patch.patch
patches/: mpv-pr-15612.patch  openssl-0001-use-winstore-by-default.patch
